--- a/index.html
+++ b/index.html
@@ -14,39 +14,39 @@
             <h2 class="personal title">Personal details</h2>
             <div class="personal-details-wrapper">
                 <div class="name item">
-                    <img width="20px" src="../CV Icons/person.svg" alt="icon">
+                    <img width="20px" src="./CV Icons/person.svg" alt="icon">
                     <p class="text">Vygintas Kirda</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Date.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Date.svg" alt="Person icon">
                     <p class="text">1984 06 05</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Gender.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Gender.svg" alt="Person icon">
                     <p class="text">Male</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Mail.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Mail.svg" alt="Person icon">
                     <p class="text">vygintaskirda@gmail.com</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Phone.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Phone.svg" alt="Person icon">
                     <p class="text">+370 600 276 27</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Address.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Address.svg" alt="Person icon">
                     <p class="text">Jurgio Baltrušaičio gatvė 11, Vilnius</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Linked.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Linked.svg" alt="Person icon">
                     <p class="text">https://www.linkedin.com/in/ Vygintas-Kirda/</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Page.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Page.svg" alt="Person icon">
                     <p class="text">https://github.com/VygintasK?tab=repositories</p>
                 </div>
                 <div class="item">
-                    <img width="20px" src="../CV Icons/Car.svg" alt="Person icon">
+                    <img width="20px" src="./CV Icons/Car.svg" alt="Person icon">
                     <p class="text">B - category</p>
                 </div>
                 <h2 class="skills title">Skills</h2>
